[package]
name = "pallet-wtema"
description = "FRAME wtema for difficulty adjustment algorithm"
license = "GPL-3.0-or-later"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-timestamp = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-core/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-timestamp/try-runtime",
]
