[package]
name = "np-arithmetic"
description = "Noir arithmetic primitives"
license = "Apache-2.0"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }

[features]
default = ["std"]
std = [
	"sp-arithmetic/std",
	"sp-core/std",
]
