[package]
name = "np-babel"
version = "0.4.0"
authors = ["Haderech Pte. Ltd."]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/noir.git"
publish = false

[dependencies]
np-cosmos = { workspace = true, default-features = false, optional = true }
np-ethereum = { workspace = true, default-features = false, optional = true }
parity-scale-codec = { version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }

[features]
default = ["std", "cosmos", "ethereum"]
std = [
	"np-cosmos?/std",
	"np-ethereum?/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"sp-core/std",
]
serde = [
	"dep:serde",
	"np-cosmos?/serde",
	"np-ethereum?/serde",
	"sp-core/serde",
]
cosmos = [
	"np-cosmos",
]
ethereum = [
	"np-ethereum",
]
