[package]
name = "np-babel"
description = "Noir primitive types for cross-protocol compatibility"
license = "Apache-2.0"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
np-cosmos = { workspace = true, optional = true }
np-ethereum = { workspace = true, optional = true }
np-nostr = { workspace = true, optional = true }
np-solana = { workspace = true, optional = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }
sp-core = { workspace = true }

[features]
default = [
	"std",
	"cosmos",
	"ethereum",
	"solana",
]
std = [
	"np-cosmos?/std",
	"np-ethereum?/std",
	"np-nostr?/std",
	"np-solana?/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"sp-core/std",
]
serde = [
	"dep:serde",
	"np-cosmos?/serde",
	"np-ethereum?/serde",
	"np-nostr?/serde",
	"np-solana?/serde",
	"sp-core/serde",
]
cosmos = ["np-cosmos"]
ethereum = ["np-ethereum"]
nostr = ["np-nostr"]
solana = ["np-solana"]
