[package]
name = "np-cosmos"
description = "Noir primitive types for Cosmos compatibility"
license = "Apache-2.0"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
bech32 = { workspace = true, optional = true }
buidl = { workspace = true }
nostd = { workspace = true }
parity-scale-codec = { workspace = true }
ripemd = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }

[dev-dependencies]
const-hex = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	"bech32/std",
	"buidl/std",
	"nostd/std",
	"parity-scale-codec/std",
	"ripemd/std",
	"scale-info/std",
	"serde/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
]
serde = [
	"dep:serde",
	"bech32",
]
