[package]
name = "np-crypto"
version = "0.1.0"
license = "Apache-2.0"

authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
array-bytes = { workspace = true, optional = true }
base64ct = { workspace = true, optional = true }
codec = { workspace = true, package = "parity-scale-codec", features = ["derive", "max-encoded-len"] }
hmac = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }
p256 = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
scale-info = { workspace = true }
secp256k1 = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
substrate-bip39 = { workspace = true, optional = true }
tiny-bip39 = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }

# substrate
sp-core = { workspace = true }
sp-runtime-interface = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
	"full_crypto",
	"base64ct/std",
	"codec/std",
	"hmac/std",
	"lazy_static",
	"p256/std",
	"regex",
	"scale-info/std",
	"secp256k1/global-context",
	"serde",
	"serde_json",
	"sha2/std",
	"sp-core/std",
	"sp-std/std",
	"substrate-bip39",
	"tiny-bip39",
	"zeroize/alloc",
]
full_crypto = [
	"array-bytes",
	"base64ct",
	"hmac",
	"p256",
	"sha2",
	"secp256k1",
	"sp-core/full_crypto",
	"zeroize",
]
