[package]
name = "np-crypto"
version = { workspace = true }
license = "Apache-2.0"

authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
array-bytes = { workspace = true, optional = true }
base64ct = { workspace = true, optional = true }
ecdsa = { workspace = true }
hmac = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
p256 = { workspace = true, features = ["arithmetic"] }
regex = { workspace = true, optional = true }
scale-info = { workspace = true, features = ["derive"] }
secp256k1 = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
substrate-bip39 = { workspace = true, optional = true }
tiny-bip39 = { workspace = true, optional = true }
url = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }

# substrate
sp-core = { workspace = true }
sp-runtime-interface = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
	"full_crypto",
	"base64ct/std",
	"ecdsa/std",
	"hmac/std",
	"lazy_static",
	"parity-scale-codec/std",
	"p256/std",
	"regex",
	"scale-info/std",
	"secp256k1/global-context",
	"serde",
	"serde_json",
	"sha2/std",
	"sp-core/std",
	"sp-std/std",
	"substrate-bip39",
	"tiny-bip39",
	"zeroize/alloc",
]
serde = [
	"dep:serde",
	"array-bytes",
	"sp-core/serde",
]
full_crypto = [
	"base64ct",
	"hmac",
	"sha2",
	"secp256k1",
	"sp-core/full_crypto",
	"url",
	"zeroize",
]
