[package]
name = "np-ethereum"
description = "Noir primitive types for Ethereum compatibility"
license = "Apache-2.0"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
buidl = { workspace = true }
const-hex = { workspace = true, optional = true }
k256 = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"buidl/std",
	"const-hex/std",
	"k256/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
]
serde = [
	"dep:serde",
	"const-hex/alloc",
]
