[package]
name = "np-io"
version = "0.1.0"
license = "Apache-2.0"

authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
np-crypto = { workspace = true }
secp256k1 = { workspace = true, features = ["alloc", "recovery"], optional = true }
sp-io = { workspace = true }
sp-runtime-interface = { workspace = true }

[features]
default = ["std"]
std = [
	"np-crypto/std",
	"secp256k1/std",
	"sp-io/std",
	"sp-runtime-interface/std",
]
