[package]
name = "np-multimap"
description = "Noir primitive types for multimaps"
license = "Apache-2.0"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
frame-support = { workspace = true }
parity-scale-codec = { workspace = true }

[dev-dependencies]
frame-system = { workspace = true, default-features = true }
scale-info = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"parity-scale-codec/std",
]
