[package]
name = "np-nostr"
version = "0.4.0"
authors = ["Haderech Pte. Ltd."]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/noir.git"
publish = false

[dependencies]
bech32 = { version = "0.11", default-features = false, optional = true }
buidl = { version = "0.1.1", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, optional = true }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }

[dev-dependencies]
const-hex = { version = "1.12", default-features = false }

[features]
default = ["std"]
std = [
	"bech32/std",
	"buidl/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"sp-core/std",
	"sp-runtime/std",
]
serde = [
	"dep:serde",
	"bech32/alloc",
]
