[package]
name = "np-nostr"
description = "Noir primitive types for Nostr compatibility"
license = "Apache-2.0"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
bech32 = { workspace = true, optional = true }
buidl = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

[dev-dependencies]
const-hex = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"bech32/std",
	"buidl/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"sp-core/std",
	"sp-runtime/std",
]
serde = [
	"dep:serde",
	"bech32/alloc",
]
