[package]
name = "np-runtime"
description = "Noir primitive types for runtime"
license = "Apache-2.0"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
buidl = { workspace = true }
const-hex = { workspace = true }
fp-self-contained = { workspace = true }
frame-support = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-weights = { workspace = true }

[features]
default = ["std"]
std = [
	"buidl/std",
	"const-hex/std",
	"fp-self-contained/std",
	"frame-support/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-weights/std",
]
serde = [
	"dep:serde",
	"fp-self-contained/serde",
	"scale-info/serde",
	"sp-core/serde",
	"sp-runtime/serde",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"fp-self-contained/try-runtime",
	"frame-support/try-runtime",
	"sp-runtime/try-runtime",
]
