[package]
name = "np-solana"
description = "Noir primitive types for Solana compatibility"
license = "Apache-2.0"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
bs58 = { workspace = true, optional = true }
buidl = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }
sp-core = { workspace = true }

[features]
default = ["std"]
std = [
	"bs58?/std",
	"buidl/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"sp-core/std",
]
serde = [
	"dep:serde",
	"bs58/alloc",
]
