[package]
name = "noir-runtime-common"
description = "Noir runtime common types"
license = "GPL-3.0-or-later"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = false

[lints]
workspace = true

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
noir-core-primitives = { workspace = true }
pallet-transaction-payment = { workspace = true }
smallvec = { workspace = true }
static_assertions = { workspace = true }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"noir-core-primitives/std",
	"pallet-transaction-payment/std",
]
