[package]
name = "ziggurat-node"
version = "0.1.0"
description = "Ziggurat node (Babel testnet)"
authors = ["Haderech Pte. Ltd."]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/noirhq/noir.git"
publish = false

[[bin]]
name = "ziggurat"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6" }
color-print = "0.3"
docify = "0.2"
futures = "0.3"
jsonrpsee = { version = "0.23", features = ["server"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

ziggurat-runtime = { path = "../runtime", default-features = true }

frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-sysinfo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
cumulus-client-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
cumulus-client-collator = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
cumulus-client-consensus-proposer = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
cumulus-client-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }

[features]
default = []
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"ziggurat-runtime/runtime-benchmarks",
]
try-runtime = [
	"polkadot-cli/try-runtime",
	"sp-runtime/try-runtime",
	"ziggurat-runtime/try-runtime",
]
