[package]
name = "nc-consensus-pow"
description = "Noir PoW consensus algorithm"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
log = { workspace = true, default-features = true }
parity-scale-codec = { workspace = true, default-features = true, features = ["derive"] }
parking_lot = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }

nc-consensus = { workspace = true }
np-consensus-pow = { workspace = true, default-features = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
sp-consensus = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-inherents = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
substrate-prometheus-endpoint = { workspace = true, default-features = true }
