[package]
name = "cosmos-rpc"
version = "0.4.0"
authors = ["Haderech Pte. Ltd."]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noirhq/noir.git"
publish = false

[dependencies]
cosmos-runtime-api = { workspace = true, features = ["std"] }
futures = { workspace = true }
jsonrpsee = { workspace = true, features = ["client", "server", "macros"] }
pallet-cosmos-types = { workspace = true, features = ["std"] }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true, features = ["std"] }
sp-blockchain = { workspace = true }
sp-core = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
