[package]
name = "cosmos-rpc"
license = "GPL-3.0-or-later"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
cosmos-runtime-api = { workspace = true, features = ["std"] }
futures = { workspace = true }
jsonrpsee = { workspace = true, features = ["client", "server", "macros"] }
pallet-cosmos-types = { workspace = true, features = ["std"] }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true, features = ["std"] }
sp-blockchain = { workspace = true }
sp-core = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
